# fmu-sumo-uploader-history

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: run_tests.yaml  run_tests_on_uploads_from_komodo.yaml
docs/: api.rst  conf.py  fmu-sumo-uploader.rst  index.rst
requirements/: requirements.txt  requirements_test.txt
src/fmu/: __init__.py
src/fmu/sumo/config_jobs/: SUMO_UPLOAD
src/fmu/sumo/uploader/: __init__.py  _connection.py  _fileondisk.py  _fileonjob.py  _logger.py  _sumocase.py  _sumofile.py  _upload_files.py  caseondisk.py  caseonjob.py  version.py
src/fmu/sumo/uploader/config_jobs/: SUMO_UPLOAD  SUMO_UPLOAD_CONFIG  SUMO_UPLOAD_DEPRECATED
src/fmu/sumo/uploader/forward_models/: __init__.py
src/fmu/sumo/uploader/forward_models/scripts/: sumo_upload.py
src/fmu/sumo/uploader/forward_models/sumo_upload/: sumo_upload.py
src/fmu/sumo/uploader/hook_implementations/: forward_models.py  jobs.py
src/fmu/sumo/uploader/scripts/: sumo_upload.py
tests/: conftest.py  test_uploader.py  test_uploads_from_komodo.py
tests/data/test_case_080/: .seismic.segy.yml  .surface.bin.yml  .surface_affiliate.bin.yml  .surface_error.bin.yml  .surface_invalid.bin.yml  .surface_restricted.bin.yml  case.yml  case_error.yml  case_invalid.yml  case_segy.yml  global_variables.yml
