[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/fmu/sumo/uploader/_version.py"

[project]
name = "fmu-sumo-uploader"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "sumo-wrapper-python>=1.0.3",
  "azure.storage.blob",
  "fmu-dataio",
  "httpx>=0.24.1",
  "OpenVDS; sys_platform != 'darwin' and python_version < '3.12'",
  "ert; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pre-commit"]
test = ["pytest", "pytest-timeout", "fmu-sumo"]

docs = [
  "sphinx==6.2.1",
  "sphinx-rtd-theme",
  "autoapi",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-apidoc",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sumo_upload = "fmu.sumo.uploader.scripts.sumo_upload:main"

[project.entry-points.ert]
fmu_sumo_uploader_jobs = "fmu.sumo.uploader.hook_implementations.jobs"
sumo_upload = "fmu.sumo.uploader.scripts.sumo_upload"

[tool.ruff]
exclude = [
  ".env",
  ".git",
  ".github",
  ".venv",
  "venv", 
]

line-length = 79

[tool.ruff.lint]
ignore = [
  "E501",
  "PD901",
]

extend-select = [
  "C4",  # Flake8-comprehensions
  "I",   # isort
  "SIM", # Flake8-simplify
  "TC",  # Flake8-type-checking
  "TID", # Flake8-tidy-imports
  "N",   # pep8-naming  
  "PD",  # Pandas
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

